test: 增加几个使用 lincheck 针对并发相关实现的测试